--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -40,8 +40,13 @@
     margin: 0 -50px 40px;
 }
 
+@media (max-width: 750px) {
+    .description-text {
+        margin: 0 20px 40px;
+    }
+}
+
 .main-demo {
-    margin-bottom: 100px;
     border-radius: 20px;
 }
 
