--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -36,7 +36,7 @@
 }
 
 
-@media (max-height: 437px) {
+@media (max-height: 437px), (max-width: 380px) {
     .nav-bar {
         display: none;
     }
